export JAVA_OPTS to enable JSONP Output
git-svn-id: http://svn.osgeo.org/osgeo/livedvd/gisvm/trunk@10338 7da46fd8-bd2a-0410-a152-cf9810cf5b10